--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Compare - MVP Demo</title>
 </head>
+<script src="dist/popup.js"></script>
 <body>
     <div class="demo-container">
         <div class="header">
