--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
+    <div id="programList">Loading...</div>
+    <script src="popup.js"></script>
     <div class="popup-container">
         <!-- Header -->
         <div class="header">
